--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -4,30 +4,30 @@
     margin: 0;
     z-index: -1;
     width: 1184px;
-    height: 740px;
-    opacity: 0.8;
+    min-height: 740px;
+    opacity: 0.3;
     position: absolute;
     top: 0px;
     left: 48px;
 }
-@media screen and (min-width: 1024px) and (max-width: 1279.9px){
+@media screen and (min-width: 320px) and (max-width: 1279.9px){
     .cover__background{
         width: 100%;
-        height: 640px;
         left: 0px;
+    }
+}
+@media screen and (min-width: 1024px) and (max-width: 1279.9px){
+    .cover__background{
+        min-height: 640px;
     }
 }
 @media screen and (min-width: 768px) and (max-width: 1023.9px){
     .cover__background{
-        width: 100%;
-        height: 480px;
-        left: 0px;
+        min-height: 480px;
     }
 }
-@media screen and (min-width: 320px) and (max-width: 767.9px){    
+@media screen and (min-width: 320px) and (max-width: 767.9px){
     .cover__background{
-        width: 100%;
-        height: 200px;
-        left: 0px;
+        min-height: 200px;
     }
 }
