--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,5 +1,6 @@
 .cover__subtitle{
-    font-family: Inter;
+    
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 22px;
