--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,28 +1,29 @@
 .cover{
     margin-top: 92px;
     position: relative;
-    height: 740px;
+    min-height: 740px;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 .cover:hover .cover__background{
-    opacity: 0.3;
+    opacity: 0.8;
 }
 @media screen and (min-width: 1024px) and (max-width: 1279.9px){
     .cover{
-        height: 640px;
+        min-height: 640px;
     }
 }
 @media screen and (min-width: 768px) and (max-width: 1023.9px){
     .cover{
-        height: 480px;
+        margin-top: 90px;
+        min-height: 480px;
     }
 }
 @media screen and (min-width: 320px) and (max-width: 767.9px){    
     .cover{
         margin-top: 66px;
-        height: 200px;
+        min-height: 200px;
     }
 }
