--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,5 @@
 .footer__copyright{
-    font-family: Inter;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 16px;
@@ -7,6 +7,11 @@
     text-align: right;
     color: #FFFFFF;
     margin: 0 48px 24px 0;
+}
+@media screen and (min-width: 768px) and (max-width: 1023.9px){
+    .footer__copyright{
+        margin: 0 24px 24px 0;
+    }
 }
 @media screen and (min-width: 320px) and (max-width: 767.9px){
     .footer__copyright{
