--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -4,6 +4,9 @@
     color: #FFFFFF;
     text-decoration: none;
 }
+.footer__link:hover{
+    opacity: 0.8;
+}
 @media screen and (min-width: 320px) and (max-width: 767.9px){
     .footer__link{
         margin: 0 0 32px 0;
