--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,5 +1,5 @@
 .footer__links{
-    font-family: Inter;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 18px;
@@ -11,6 +11,11 @@
     margin: 0 0 24px 48px;
     padding: 0;
     list-style-type: none;
+}
+@media screen and (min-width: 768px) and (max-width: 1023.9px){
+    .footer__links{
+        margin: 0 0 24px 24px;
+    }
 }
 @media screen and (min-width: 320px) and (max-width: 767.9px){
     .footer__links{
