--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,5 +1,5 @@
 .header__lang-link{
-    font-family: Inter;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-size: 24px;
     font-weight: 400;
     line-height: 28px;
@@ -9,7 +9,7 @@
     margin-left: 18px;
     text-decoration: none;
 }
-.header__lang-link:nth-child(1){
+.header__lang-link_enabled{
     text-decoration: underline;
 }
 @media screen and (min-width: 1024px) and (max-width: 1279.9px){
