--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,22 +1,22 @@
 .intro__title{
-    font-family: Inter;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-size: 54px;
     font-weight: 900;
     line-height: 58px;
     letter-spacing: 0em;
     text-align: left;
     color: #FFFFFF;
-    margin: 114px 442px 0px 148px;
+    margin: 92px 442px 0px 148px;
 }
 @media screen and (min-width: 1024px) and (max-width: 1279.9px){
     .intro__title{
-        margin: 114px 286px 0px 48px;
+        margin: 92px 286px 0px 48px;
     }
 }
 @media screen and (min-width: 768px) and (max-width: 1023.9px){
     .intro__title{
         width: 720px;
-        margin: 110px 24px 0px 24px;
+        margin: 88px 24px 0px 24px;
     }
 }
 @media screen and (min-width: 320px) and (max-width: 767.9px){
