--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,5 +1,5 @@
 .lead__caption{
-    font-family: Inter;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-size: 10px;
     font-weight: 400;
     line-height: 14px;
@@ -7,14 +7,20 @@
     text-align: left;
     color: #FFFFFF;
     margin: 8px 0 0 148px;
+    text-transform: uppercase;
+}
+@media screen and (min-width: 1024px) and (max-width: 1279.9px){
+    .lead__caption{
+        margin: 8px 0px 0px 48px;
+    }
 }
 @media screen and (min-width: 768px) and (max-width: 1023.9px){
     .lead__caption{
-        margin: 8px 586px 0px 24px;
+        margin: 8px 0px 0px 24px;
     }
 }
 @media screen and (min-width: 320px) and (max-width: 767.9px){
     .lead__caption{
-        margin: 8px 146px 0 16px;
+        margin: 8px 0px 0 16px;
     }
 }
