--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,5 +1,5 @@
 .lead__subtitle{
-    font-family: Inter;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-size: 30px;
     font-weight: 400;
     line-height: 36px;
@@ -27,7 +27,6 @@
     .lead__subtitle{
         margin: 16px auto 0px auto;
         width: 288px;
-        height: 40px;
         font-size: 16px;
         font-weight: 400;
         line-height: 20px;
