--- a/blocks/photo-grid/__container/photo-grid__container.css
+++ b/blocks/photo-grid/__container/photo-grid__container.css
@@ -1,4 +1,4 @@
-.container{
+.photo-grid__container{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 213px);
@@ -8,14 +8,14 @@
     padding: 0;
 }
 @media screen and (min-width: 1024px) and (max-width: 1279.9px){
-    .container{
+    .photo-grid__container{
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(4, 225px);
         gap: 14px;
     }
 }
 @media screen and (min-width: 768px) and (max-width: 1023.9px){
-    .container{
+    .photo-grid__container{
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(6, 264px);
         gap: 16px;
@@ -23,7 +23,7 @@
     }
 }
 @media screen and (min-width: 320px) and (max-width: 767.9px){
-    .container{
+    .photo-grid__container{
         grid-template-columns: 1fr;
         grid-template-rows: repeat(12, 216px);
         gap: 12px;
