--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,6 +1,9 @@
 .place__paragraph{
     margin: 0 0 26px 0;
 }
+.place__paragraph:last-child{
+    margin: 0;
+}
 @media screen and (min-width: 1024px) and (max-width: 1279.9px){
     .place__paragraph{
         margin: 0 0 27px 0;
@@ -24,5 +27,8 @@
         line-height: 26px;
         letter-spacing: 0em;
         width: 288px;
+    }
+    .place__paragraph:last-child{
+        margin: 0 16px 0 16px;
     }
 }
