--- a/blocks/place/__photo/place__photo.css
+++ b/blocks/place/__photo/place__photo.css
@@ -1,3 +1,9 @@
+@media screen and (min-width: 1024px) and (max-width: 1279.9px){
+    .place__photo{
+        width: 440px;
+        height: 440px;
+    }
+}
 @media screen and (min-width: 768px) and (max-width: 1023.9px){
     .place__photo{
         width: 340px;
