--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,11 +1,11 @@
 .place__url-heading{
-    font-family: Inter;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-size: 12px;
     font-weight: 400;
     line-height: 12px;
     letter-spacing: 2px;
     text-align: left;
-    color: #FFFFFF;
+    color: #AAAAAA;
 }
 @media screen and (min-width: 768px) and (max-width: 1023.9px){  
     .place__url-heading{
