--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -11,16 +11,19 @@
         margin: 56px auto 0px auto;
     }
 }
-@media screen and (min-width: 768px) and (max-width: 1023.9px){
+@media screen and (min-width: 320px) and (max-width: 1023.9px){
     .lead__image{
         width: 100%;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1023.9px){
+    .lead__image{
         height: 480px;
         margin: 56px 0px 0px 0px;
     }
 }
 @media screen and (min-width: 320px) and (max-width: 767.9px){
     .lead__image{
-        width: 100%;
         height: 200px;
         margin: 40px 2px 0px 2px;
     }
