--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -9,23 +9,23 @@
         margin: 0 0 27px 0;
     }
 }
-@media screen and (min-width: 768px) and (max-width: 1023.9px){ 
+@media screen and (min-width: 320px) and (max-width: 1023.9px){ 
     .place__paragraph{
-        margin: 0 0 25px 0;
         font-size: 16px;
         font-weight: 400;
         line-height: 26px;
         letter-spacing: 0em;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1023.9px){ 
+    .place__paragraph{
+        margin: 0 0 25px 0;
         width: 352px;
     }
 }
 @media screen and (min-width: 320px) and (max-width: 767.9px){
     .place__paragraph{
         margin: 0 16px 25px 16px;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 26px;
-        letter-spacing: 0em;
         width: 288px;
     }
     .place__paragraph:last-child{
