--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,4 +1,4 @@
-.cover{
+.cover__link{
     margin-top: 92px;
     position: relative;
     min-height: 740px;
@@ -8,23 +8,23 @@
     align-items: center;
     text-decoration: none;
 }
-.cover:hover .cover__background{
-    opacity: 0.8;
+.cover__link:hover .cover__background{
+    opacity: 0.2;
 }
 @media screen and (min-width: 1024px) and (max-width: 1279.9px){
-    .cover{
+    .cover__link{
         min-height: 640px;
     }
 }
 @media screen and (min-width: 768px) and (max-width: 1023.9px){
-    .cover{
-        margin-top: 90px;
+    .cover__link{
         min-height: 480px;
+        margin-top: 90px;
     }
 }
 @media screen and (min-width: 320px) and (max-width: 767.9px){    
-    .cover{
-        margin-top: 66px;
+    .cover__link{
         min-height: 200px;
+        margin-top: 66px;
     }
 }
