--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -19,11 +19,9 @@
 }
 @media screen and (min-width: 320px) and (max-width: 767.9px){
     .footer__links{
-        margin: 16px;
+        margin: 0 16px 16px 16px;
         flex-direction: column;
         font-size: 24px;
-        font-weight: 400;
         line-height: 24px;
-        letter-spacing: 0em;
     }
 }
