--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -9,20 +9,12 @@
     margin-left: 18px;
     text-decoration: none;
 }
-.header__lang-link_enabled{
-    text-decoration: underline;
-}
-@media screen and (min-width: 768px) and (max-width: 1279.9px){
-    .header__lang-link{
-        font-size: 24px;
-        font-weight: 400;
-        line-height: 28px;
-    }
+.header__lang-link:hover{
+    opacity: 0.2;
 }
 @media screen and (min-width: 320px) and (max-width: 767.9px){
     .header__lang-link{
         font-size: 18px;
-        font-weight: 400;
         line-height: 20px;
     }
 }
