--- a/blocks/photo-grid/__image/photo-grid__image.css
+++ b/blocks/photo-grid/__image/photo-grid__image.css
@@ -1,22 +1,19 @@
 .photo-grid__image{
-    width: 284px;
+    width: 100%;
     height: 213px;
 }
 @media screen and (min-width: 1024px) and (max-width: 1279.9px){
     .photo-grid__image{
-        width: 300px;
         height: 225px;
     }
 }
 @media screen and (min-width: 768px) and (max-width: 1023.9px){
     .photo-grid__image{
-        width: 352px;
         height: 264px;
     }
 }
 @media screen and (min-width: 320px) and (max-width: 767.9px){
     .photo-grid__image{
-        width: 288px;
         height: 216px;
     }
 }
