--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -27,6 +27,6 @@
         height: 100%;
         grid-row-start: 3;
         grid-row-end: 4;
-        margin: 0 0 32px 0;
+        margin: 0;
     }
 }
