--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,8 +1,6 @@
 .cover__link{
-    margin-top: 92px;
-    position: relative;
+    width: 1184px;
     min-height: 740px;
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,6 +8,11 @@
 }
 .cover__link:hover .cover__background{
     opacity: 0.2;
+}
+@media screen and (min-width: 320px) and (max-width: 1279.9px){    
+    .cover__link{
+        width: 100%;
+    }
 }
 @media screen and (min-width: 1024px) and (max-width: 1279.9px){
     .cover__link{
@@ -19,12 +22,10 @@
 @media screen and (min-width: 768px) and (max-width: 1023.9px){
     .cover__link{
         min-height: 480px;
-        margin-top: 90px;
     }
 }
 @media screen and (min-width: 320px) and (max-width: 767.9px){    
     .cover__link{
         min-height: 200px;
-        margin-top: 66px;
     }
 }
