--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -21,7 +21,7 @@
 }
 @media screen and (min-width: 320px) and (max-width: 767.9px){
     .intro__text{
-        margin: 40px 16px 0px 16px;
-        width: 288px;
+        margin: 40px auto 0px auto;
+        max-width: 288px;
     }
 }
