--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -21,9 +21,9 @@
 }
 @media screen and (min-width: 320px) and (max-width: 767.9px){
     .intro__title{
-        margin: 64px 16px 0px 16px;
+        margin: 64px auto 0px auto;
         font-size: 32px;
         line-height: 35px;
-        width: 288px;
+        max-width: 288px;
     }
 }
