--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -25,6 +25,6 @@
 @media screen and (min-width: 320px) and (max-width: 767.9px){
     .lead__image{
         height: 200px;
-        margin: 40px 2px 0px 2px;
+        margin: 40px 0x 0px 0px;
     }
 }
