--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -12,7 +12,7 @@
 @media screen and (min-width: 320px) and (max-width: 767.9px){
     .lead__subtitle{
         margin: 16px auto 0px auto;
-        width: 288px;
+        max-width: 288px;
         font-size: 16px;
         line-height: 20px;
     }
