--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -21,8 +21,8 @@
 }
 @media screen and (min-width: 320px) and (max-width: 767.9px){
     .lead__title{
-        margin: 48px 16px 0px 16px;
-        width: 288px;
+        margin: 48px auto 0px auto;
+        max-width: 288px;
         font-size: 40px;
         line-height: 44px;
     }
