--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -24,7 +24,7 @@
 @media screen and (min-width: 320px) and (max-width: 767.9px){
     .place__image{
         width: 100%;
-        height: 100%;
+        height: 320px;
         grid-row-start: 3;
         grid-row-end: 4;
         margin: 0;
