--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -15,20 +15,17 @@
         font-weight: 400;
         line-height: 26px;
         letter-spacing: 0em;
+        margin: 0 0 25px 0;
     }
+}
 }
 @media screen and (min-width: 768px) and (max-width: 1023.9px){ 
     .place__paragraph{
-        margin: 0 0 25px 0;
-        width: 352px;
+        max-width: 352px;
     }
 }
 @media screen and (min-width: 320px) and (max-width: 767.9px){
     .place__paragraph{
-        margin: 0 16px 25px 16px;
         width: 288px;
-    }
-    .place__paragraph:last-child{
-        margin: 0 16px 0 16px;
     }
 }
