--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -15,5 +15,6 @@
 @media screen and (min-width: 320px) and (max-width: 767.9px){
     .place__paragraphs{
         width: 288px;
+        margin: 0 auto;
     }
 }
