--- a/blocks/photo-grid/__container/photo-grid__container.css
+++ b/blocks/photo-grid/__container/photo-grid__container.css
@@ -3,7 +3,7 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 213px);
     list-style-type: none;
-    margin: 92px 48px 12px 48px;
+    margin: 92px 48px 0 48px;
     gap: 16px;
     padding: 0;
 }
@@ -18,7 +18,7 @@
     .photo-grid__container{
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(6, 264px);
-        margin: 88px 24px 15px 24px;
+        margin: 88px 24px 0 24px;
     }
 }
 @media screen and (min-width: 320px) and (max-width: 767.9px){
@@ -26,6 +26,6 @@
         grid-template-columns: 1fr;
         grid-template-rows: repeat(12, 216px);
         gap: 12px;
-        margin: 64px 16px 14px 16px;
+        margin: 64px 16px 0 16px;
     }
 }
