--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,31 +1,13 @@
 .place{
-    width: 984px;
-    list-style-type: none;
-    padding: 0;
-    margin: 80px auto 0px auto;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, fit-content(460px));
-    grid-auto-rows: 0;  
-}
-@media screen and (min-width: 1024px) and (max-width: 1279.9px){
-    .place{
-        width: 928px;
-    }
+    margin-top: 92px;
 }
 @media screen and (min-width: 768px) and (max-width: 1023.9px){
     .place{
-        width: 720px;
         margin-top: 88px;
     }
 }
 @media screen and (min-width: 320px) and (max-width: 767.9px){
     .place{
-        width: 100%;
-        height: fit-content;
-        margin: 64px 0px 0px 0px;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(4, fit-content(500px));
-        gap: 32px;
+        margin-top: 64px;
     }
 }
